# capnproto-podgen

./: CMakeLists.txt  CMakePresets.json  CtlCapnProto.cmake  conanfile.txt
example/: include.convert.hpp  main.cpp  test.capnp
include/: defs.hpp  pod.capnp  pod.hpp.tmpl  pod_convert.hpp.tmpl  timestamp.convert.hpp
src/: PodGenerator.cpp  main.cpp  schema.hpp
test/: CMakeLists.txt  podgen_test.cpp  test.capnp  test_simple.hpp
